[package]
name = "geobuf"
description = "Geobuf encoder and decoder"
repository = "https://github.com/ka7eh/rust-geobuf"
readme = "README.md"
version = "0.1.4"
authors = ["Kaveh Karimi (ka7eh) <ka7eh@pm.me>"]
edition = "2021"
license = "ISC"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[badges]
travis-ci = { repository = "ka7eh/rust-geobuf" }
coveralls = { repository = "ka7eh/rust-geobuf" }

[dependencies]
cfg-if = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
clap = { version = "3.1", optional = true, features = ["derive"] }
protobuf = "=3.0.2"
protobuf-codegen = "=3.0.2"
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional =true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[target.'cfg(wasm)'.dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[features]
default = ["clap"]
wasm = ["cfg-if", "console_error_panic_hook", "wasm-bindgen", "web-sys"]

[lib]
name = "geobuf"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "geobuf"
path = "src/bin.rs"
test = false

[profile.release]
opt-level = 3
lto = true
