[package]
name = "geobuf"
description = "A geobuf encoder and decoder in rust"
repository = "https://github.com/ka7eh/rust-geobuf"
readme = "README.md"
version = "0.1.0"
authors = ["Kaveh Karimi (ka7eh) <kaveh.k.a@gmail.com>"]
edition = "2018"
license = "ISC"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "ka7eh/rust-geobuf" }
coveralls = { repository = "ka7eh/rust-geobuf" }

[dependencies]
clap = { version = "3.0.0-beta.1", optional = true }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[target.'cfg(binary)'.dependencies.serde_json]
default-features = true

[features]
binary = ["clap"]

[lib]
name = "geobuf"
path = "src/lib.rs"

[[bin]]
name = "geobuf"
path = "src/bin.rs"
test = false
required-features = ["binary"]
